# lumen-dark-pool

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md
circuits/: SPEC.md
circuits/hello/: Nargo.toml  Prover.toml
circuits/hello/src/: main.nr
circuits/match/: Nargo.toml  Prover.toml  README.md
circuits/match/src/: lib.nr  main.nr
contracts/: README.md
contracts/commitment/: Cargo.toml  README.md
contracts/commitment/src/: lib.rs
contracts/commitment/tests/: commitment_test.rs
contracts/settlement/: Cargo.toml  README.md
contracts/settlement/src/: lib.rs
contracts/settlement/tests/: settlement_test.rs
contracts/verifier/: Cargo.toml
crates/ultrahonk-soroban-verifier/: Cargo.toml
prover/: matcher.ts
prover/compute-hash/: Nargo.toml  Prover.toml
prover/compute-hash/src/: main.nr
scripts/: commitment_demo.sh  dev.sh  end_to_end.sh  hello_proof.sh  match_proof.sh  match_proof_negative.sh
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/: ActivityFeed.tsx  Footer.tsx  Header.tsx  Hero.tsx  MyOrders.tsx  OrderForm.tsx  Toaster.tsx  WalletButton.tsx
web/src/lib/: api.ts  config.ts  poseidon.ts  toast.tsx  types.ts  wallet.ts
